--- a/style.css
+++ b/style.css
@@ -95,7 +95,6 @@ body {
     .contacts__tel {
         text-decoration: none;
         font-size: 26px;
-        /* margin-bottom: 4px; */
         line-height: 0px;
     }
 
@@ -123,17 +122,10 @@ body {
         font-size: 18px;
         margin-bottom: 31.5px;
     }
-    
-    .preview__button {
-        font-size: 14px;
-        background: #F5170E;
-        border-radius: 35px;
-        padding: 18px 40px;
-        color: #fff;
-        font-weight: bold;
-        text-transform: uppercase;
-        text-decoration: none;
-        display: inline-block;
+
+    .button--width {
+    padding: 18px 38px !important;
+    margin-left: 0px !important;
     }
 
     .preview__button:hover {
@@ -142,7 +134,7 @@ body {
 
     .features {
         margin-top: 246px;
-        margin-bottom: 127px;
+        margin-bottom: 129px;
     }
 
     .features__title {
@@ -163,8 +155,8 @@ body {
         background: #FFFFFF;
         border-radius: 5px;
         display: inline-block;
-        margin-right: 25px;
-        width: 360px;
+        margin-right: 23px;
+        width: 362px;
     }
 
     .features__item:last-child {
@@ -191,8 +183,8 @@ body {
     
     .features__desc-block {
         display: inline-flex;
-        width: 150px;
-        padding: 11px;
+        width: 152px;
+        padding: 9px;
     }
 
     .features__desc-block:last-child {
@@ -201,7 +193,7 @@ body {
 
     .features__desc-time {
         font-size: 16px;
-        color: #303030;
+        color: #666666;
     }
 
     .features__desc-icon {
@@ -210,8 +202,8 @@ body {
 
     .features__text {
         font-size: 14px;
-        line-height: 21px;
-        margin-bottom: 24px;
+        line-height: 22px;
+        margin-bottom: 23px;
     }
 
     .button {
@@ -239,6 +231,119 @@ body {
         color: #F5170E;
     }
 
+    .news__title {
+        font-size: 36px;
+        line-height: 42px;
+        letter-spacing: 2px;
+        margin-bottom: 54px;
+    }
 
+    .news__item {
+        width: 557px;
+        display: inline-block;
+        vertical-align: top;
+        position: relative;
+        border-radius: 5px;
+        overflow: hedden;
+        margin-right: 20px;
+    }
 
+    .news__item:last-child {
+        margin-right: 0;
+    }
+
+    .news__img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .news__content {
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        padding: 14px 29px;
+        min-height: 155px;
+        
+    }
+
+    .news__date {
+        font-size: 14px;
+        margin-bottom: 15px;
+    }
+
+    .news__list {
+        margin-bottom: 55px;
+    }
+
+    .news__subtitle {
+        font-size: 24px;
+        font-weight: bold;
+        margin-bottom: 0px;
+        margin-top: 14px;
+    }
+
+    .paginator {
+        text-align: center;
+        margin-bottom: 145px;
+    }
+
+    .paginator__display, .paginator__list {
+        display: inline-block;
+        vertical-align: middle;
+        margin-right: 26px;
+    }
+
+    .paginator__item {
+        display: inline-block;
+        vertical-align: middle;
+    }
+
+    .paginator__link {
+        display: block;
+        width: 32px;
+        height: 32px;
+        border-radius: 50%;
+        text-decoration: none;
+        font-weight: bold;
+        line-height: 32px;
+    }
+
+    .paginator__item--active .paginator__link {
+        background: #fff;
+        color: #F5170E;
+    }
+
+    .about::before {
+        content: "";
+        display: block;
+        width: 490px;
+        height: 505px;
+        background-image: url(./img/gates.png) center center / cover no-repeat;
+    }
+
+    .about {
+        background: inherit;
+        padding: 70px 81px;
+        color: #000000;
+    }
+
+    .about__title {
+        font-weight: bold;
+        font-size: 36px;
+        margin-bottom: 37px;
+    }
+
+    .about__text {
+        margin-bottom: 43px;
+    }
+
+    .about__text p {
+        margin-bottom: 20px;
+    }
   
+    .about__text p:last-child {
+        margin-bottom: 0;
+    }
