--- a/style.css
+++ b/style.css
@@ -28,8 +28,16 @@ body {
        font-weight: normal;
    }
 
+   p {
+       margin-top: 0;
+   }
+
    * {
        box-sizing: border-box;
+   }
+
+   .main-page-wrapper {
+       background: url("./img/hero.png") center top no-repeat, url("./img/hero-2.png") center bottom 45px no-repeat;
    }
 
    .container {
@@ -56,10 +64,6 @@ body {
     top: 30px;
     left: 163px;
     }
-
-   .footer {
-       position: absolute;
-   }
 
     .menu__item {
         display: inline-block;
@@ -96,6 +100,16 @@ body {
         text-decoration: none;
         font-size: 26px;
         line-height: 0px;
+    }
+
+    .contacts__text {
+        color: #9A9A9A;
+        font-size: 11px;
+        line-height: 3;
+    }
+
+    .contacts--footer {
+        top: 12.64px;
     }
 
     .contacts__schedule {
@@ -234,7 +248,7 @@ body {
     .news__title {
         font-size: 36px;
         line-height: 42px;
-        letter-spacing: 2px;
+        letter-spacing: 1.8px;
         margin-bottom: 54px;
     }
 
@@ -266,6 +280,7 @@ body {
         bottom: 0;
         padding: 14px 29px;
         min-height: 155px;
+        line-height: 1.4;
         
     }
 
@@ -316,18 +331,31 @@ body {
         color: #F5170E;
     }
 
-    .about::before {
+    .about:before, .about__desc {
+        display: inline-block;
+        vertical-align: top;
+    }
+
+    .about:before {
         content: "";
-        display: block;
         width: 490px;
         height: 505px;
-        background-image: url(./img/gates.png) center center / cover no-repeat;
+        background: url("./img/gates.png") center center / cover no-repeat;
     }
 
     .about {
+        height: 552px;
+        width: 1141px;
+        margin-bottom: 80px;
+    }
+
+    .about__desc {
         background: inherit;
         padding: 70px 81px;
         color: #000000;
+        width: 664px;
+        position: absolute;
+
     }
 
     .about__title {
@@ -337,13 +365,90 @@ body {
     }
 
     .about__text {
-        margin-bottom: 43px;
+        margin-bottom: 41px;
+        line-height: 1.7;
     }
 
     .about__text p {
         margin-bottom: 20px;
     }
-  
+
     .about__text p:last-child {
         margin-bottom: 0;
+    }
+
+    .about__content {
+        display: inline-block;
+        position: relative;
+        margin-left: -141px;
+        margin-top: 96px;
+    }
+
+    .about__content-img {
+        position: absolute;
+    }
+
+    .footer-container__content {
+        border-top: 1px solid#1a3038;
+        position: relative;
+    }
+
+    .footer {
+        height: 152px;
+    }
+
+    .socials__item {
+        display: inline-block;
+        vertical-align: middle;
+    }
+
+    .socials__item:last-child {
+        margin-right: 0;
+    }
+
+    .socials__link {
+        display: block;
+        text-decoration: none;
+        width: 36px;
+        height: 36px;
+        margin-right: 6px;
+        background: center center no-repeat;
+    }
+
+    .socials {
+        top: 25px;
+        right: 259px;
+        position: absolute;
+    }
+
+    .socials__item--icon--telegram .socials__link {
+        background-image: url("./img/telegram.png");
+    }
+
+    ..socials__item--icon--telegram .socials__link:hover {
+        background-image: url("./img/t-hover.png");
+    }
+
+    .socials__item--icon--vk .socials__link {
+        background-image: url("./img/vk.png");
+    }
+
+    ..socials__item--icon--vk .socials__link:hover {
+        background-image: url("./img/vk-hover.png");
+    }
+
+    .socials__item--icon--fb .socials__link {
+        background-image: url("./img/f.png");
+    }
+
+    ..socials__item--icon--fb .socials__link:hover {
+        background-image: url("./img/f-hover.png");
+    }
+
+    .socials__item--icon--insta .socials__link {
+        background-image: url("./img/in.png");
+    }
+
+    ..socials__item--icon--insta .socials__link:hover {
+        background-image: url("./img/in-hover.png");
     }
