--- a/air_asia/css/main.css
+++ b/air_asia/css/main.css
@@ -422,15 +422,25 @@ body {
     .footer-container__col {
         display: flex;
         align-items: center;
+        margin-top: 14px;
     }
  
     .footer-container__col--align--right {
-     justify-content: flex-end;
-     padding-top: 15px;
+        display: flex;
+        justify-content: flex-end;
+        padding-top: 15px;
+    }
+
+    .socials {
+        top: 25px;
+        right: 259px;
+        display: flex;
+        align-items: center;
+        margin-right: 73px;
     }
 
     .socials__item {
-        display: inline-block;
+        display: inline-flex;
         vertical-align: middle;
         margin-right: 6px;
     }
@@ -445,12 +455,6 @@ body {
         width: 36px;
         height: 36px;
         background: center center no-repeat;
-    }
-
-    .socials {
-        top: 25px;
-        right: 259px;
-        position: absolute;
     }
 
     .socials__item--icon--telegram .socials__link {
