--- a/air_asia/css/main.css
+++ b/air_asia/css/main.css
@@ -417,6 +417,8 @@ body {
         display: flex;
         align-items: center;
         justify-content: space-between;
+        padding-top: 45px;
+        margin-bottom: 65px;
     }
 
     .footer-container__col {
