--- a/air_asia/css/main.css
+++ b/air_asia/css/main.css
@@ -11,6 +11,7 @@ body {
 
    a {
        color: inherit;
+       text-decoration: none;
    }
 
    ul {
@@ -288,16 +289,17 @@ body {
 
     .news__content {
         padding: 14px 29px;
-        min-height: 155px;
+        min-height: 394px;
         line-height: 1.4;
         position: relative;
+        top: 238px;
         
     }
 
     .news__date {
         display: inline-block;
         font-size: 14px;
-        margin-bottom: 15px;
+        margin-bottom: 2px;
     }
 
     .news__list {
@@ -367,13 +369,13 @@ body {
     .about {
         height: 552px;
         width: 1141px;
-        margin-bottom: 80px;
+        margin-bottom: 3px;
         display: flex;
     }
 
     .about__desc {
         background: inherit;
-        padding: 70px 81px;
+        padding: 70px 85px;
         color: #000000 !important;
         width: 664px;
         position: relative;
@@ -410,6 +412,7 @@ body {
     .about__content-img {
         display: flex;
         position: absolute;
+        left: 4px;
     }
 
     .footer {
@@ -503,4 +506,55 @@ body {
 
     .socials__item--icon--insta .socials__link:hover {
         background-image: url("../img/in-hover.png");
+    }
+
+    /* welcome page */
+
+    .welcome {
+        display: flex;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        align-items: center;
+        justify-content: center;
+        background: url(../img_welcome/bg.png) center bottom / cover no-repeat;
+        overflow: hidden;
+    }
+
+    .central {
+        display: block;
+        position: relative;
+        width: 591px;
+        height: 311px;
+        margin-top: 161px;
+    }
+
+    .shades__img {
+        position: absolute;
+        bottom: 237px;
+        left: 0px;
+    }
+
+    .central__logo {
+        position: absolute;
+        bottom: 305px;
+        left: 159px;
+    }
+
+    .central__title {
+        position: absolute;
+        font-size: 18px;
+        line-height: 21px;
+        color: #FFFFFF;
+        bottom: 268px;
+        left: 200px;
+    }
+
+    .button--red {
+        position: absolute;
+        padding: 18px 58px;
+        top: 82px;
+        left: 186px;
     }
